# ZcWidgetTools

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/: zcstackedwidget.cpp  zcstackedwidget.h
